FIX: 이모티콘 api 코드 리팩토링